--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Dynamic Resume Builder By Nabila Sharif</h1>
+    <h1>Resume Builder By Nabila Sharif Downloadable as a PDF</h1>
     <form id="resumeForm">
        <fieldset>
            <legend>Personal Information </legend>
